// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTreeIcon renders default 1`] = `
<div>
  <svg
    class="sc-hLQSwg hewGWh"
    fill="transparent"
    stroke="currentcolor"
    stroke-width="2"
    viewBox="2 2 28 28"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <rect
      height="6"
      rx="2"
      stroke-linejoin="round"
      width="14"
      x="3"
      y="3"
    />
    <rect
      height="6"
      rx="2"
      stroke-linejoin="round"
      width="14"
      x="15"
      y="13"
    />
    <rect
      height="6"
      rx="2"
      stroke-linejoin="round"
      width="14"
      x="15"
      y="23"
    />
    <path
      d="M10 9V24C10 25.1046 10.8954 26 12 26H15"
    />
    <path
      d="M10 16L15 16"
    />
  </svg>
</div>
`;

exports[`DataTreeIcon renders large 1`] = `
<div>
  <svg
    class="sc-hLQSwg hewGWh"
    fill="transparent"
    stroke="currentcolor"
    stroke-width="2"
    viewBox="2 2 28 28"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <rect
      height="6"
      rx="2"
      stroke-linejoin="round"
      width="14"
      x="3"
      y="3"
    />
    <rect
      height="6"
      rx="2"
      stroke-linejoin="round"
      width="14"
      x="15"
      y="13"
    />
    <rect
      height="6"
      rx="2"
      stroke-linejoin="round"
      width="14"
      x="15"
      y="23"
    />
    <path
      d="M10 9V24C10 25.1046 10.8954 26 12 26H15"
    />
    <path
      d="M10 16L15 16"
    />
  </svg>
</div>
`;

exports[`DataTreeIcon renders medium 1`] = `
<div>
  <svg
    class="sc-dmyCSP dRcSrL"
    fill="transparent"
    stroke="currentcolor"
    stroke-width="2"
    viewBox="0.7 0.7 22.5 22.5"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <rect
      height="4"
      rx="1"
      stroke-linejoin="round"
      width="10"
      x="2"
      y="2"
    />
    <rect
      height="4"
      rx="1"
      stroke-linejoin="round"
      width="10"
      x="12"
      y="10"
    />
    <rect
      height="4"
      rx="1"
      stroke-linejoin="round"
      width="10"
      x="12"
      y="18"
    />
    <path
      d="M7 7V18C7 19.1046 7.89543 20 9 20H12"
    />
    <path
      d="M6 12H11"
    />
  </svg>
</div>
`;

exports[`DataTreeIcon renders small 1`] = `
<div>
  <svg
    class="sc-guDLey kBBjNb"
    fill="transparent"
    stroke="currentcolor"
    viewBox="0.8 0.8 18 18"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <rect
      fill="currentcolor"
      height="4"
      rx="1"
      width="8"
      x="10"
      y="8"
    />
    <rect
      fill="currentcolor"
      height="4"
      rx="1"
      width="8"
      x="10"
      y="14"
    />
    <rect
      height="4"
      rx="1"
      stroke-linejoin="round"
      stroke-width="2"
      width="8"
      x="2"
      y="2"
    />
    <path
      d="M6 7V15C6 15.5523 6.44772 16 7 16H11"
      stroke-width="2"
    />
    <path
      d="M6 10H11"
    />
  </svg>
</div>
`;
